# NovaPhy

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  claude.md  vcpkg-configuration.json  vcpkg.json
.claude/: settings.local.json
.claude/skills/build-project/: SKILL.md
.github/workflows/: build.yml  ci.yml
cmake/: find_target_dlls.cmake  install_dependence.cmake  novaphyConfig.cmake.in  utils.cmake
compat/: build.md  compat.cmake
compat/port/eigen3/: portfile.cmake  use-arg.patch
compat/scripts/: build-linux-gcc.py
demos/: demoSim_ppo_inverted_pendulum.py  demo_double_pendulum.py  demo_hinge.py  demo_ipc_stack.py  demo_joint_chain.py  demo_performance_monitor.py  demo_pyramid.py  demo_pyramid_ball.py  demo_pyramids_numerous.py  demo_robot_sim_pipeline.py  demo_rope_bridge.py  demo_vbd_contacts_gui.py  demo_vbd_joint_gui.py  demo_vbd_spring_gui.py
demos/data/: robot_env.usda  robot_two_link.urdf
include/novaphy/: novaphy.h  novaphy_config.h.in
include/novaphy/collision/: narrowphase.h
include/novaphy/dynamics/: featherstone.h  free_body_solver.h
include/novaphy/fluid/: boundary.h  neighbor_search.h  particle_state.h
include/novaphy/io/: feature_completeness.h  openusd_importer.h  scene_builder.h  scene_types.h  simulation_exporter.h  urdf_parser.h
include/novaphy/ipc/: ipc_config.h  ipc_world.h  shape_converter.h
include/novaphy/sim/: performance_monitor.h  state.h  world.h
include/novaphy/vbd/: vbd_config.h  vbd_forces.h  vbd_solver.h  vbd_world.h
python/bindings/: CMakeLists.txt  bind_dynamics.cpp  bind_fluid.cpp  bind_io.cpp  bind_ipc.cpp  bind_main.cpp  bind_performance.cpp  bind_sim.cpp  bind_vbd.cpp
python/novaphy/: __init__.py  viz.py
scripts/: build-linux-gcc.py  config_linux.py
src/: CMakeLists.txt
src/collision/: narrowphase.cpp  narrowphase_sat.cpp
src/dynamics/: featherstone.cpp  free_body_solver.cpp
src/fluid/: boundary.cpp  fluid_world.cpp  neighbor_search.cpp  particle_state.cpp  pbf_solver.cpp
src/io/: feature_completeness.cpp  openusd_importer.cpp  scene_builder.cpp  simulation_exporter.cpp  urdf_parser.cpp
src/ipc/: CMakeLists.txt  ipc_world.cpp  shape_converter.cpp
src/sim/: performance_monitor.cpp  state.cpp  world.cpp
src/vbd/: CMakeLists.txt
src/vbd/cpu/: vbd_solver.cpp  vbd_world.cpp
src/vbd/vbd_cuda/: vbd_solver_cuda.cu  vbd_world_cuda.cpp
tests/: CMakeLists.txt
tests/cmake_project/add_subdirectory/: CMakeLists.txt
tests/cmake_project/find_package/: CMakeLists.txt  main.cpp
tests/cpp/: test_core_span_apis.cpp  test_io_path_apis.cpp
tests/python/: test_demo_robot_pipeline.py  test_io_pipeline.py  test_ipc.py  test_performance_monitor.py
